<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cardvisit.CardVisitFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/text_card_visit_add"
        app:titleTextColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_edit_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:hint="@string/text_card_visit_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_edit_enterprise"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:hint="@string/text_card_visit_enterprise"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_edit_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_enterprise"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_edit_number_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:hint="@string/text_card_visit_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_edit_enterprise">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_number_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_edit_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_16dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_marginEnd="@dimen/size_16dp"
        android:hint="@string/text_card_visit_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_edit_number_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_add_card_visit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_add_card_visit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1" />
</androidx.constraintlayout.widget.ConstraintLayout>
