<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_margin="@dimen/size_6dp"
    android:backgroundTint="@color/gray"
    app:cardCornerRadius="@dimen/size_6dp"
    app:cardElevation="@dimen/size_6dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_6dp"
            android:text="@string/text_card_visit_name"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_6dp"
            android:text="@string/text_card_visit_phone"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_18sp"
            app:layout_constraintLeft_toLeftOf="@id/text_title_name"
            app:layout_constraintTop_toBottomOf="@+id/text_title_name" />

        <TextView
            android:id="@+id/text_title_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_6dp"
            android:text="@string/text_card_visit_email"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_18sp"
            app:layout_constraintLeft_toLeftOf="@id/text_title_phone"
            app:layout_constraintTop_toBottomOf="@+id/text_title_phone" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_6dp"
            android:lines="1"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_18sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_title_email"
            app:layout_constraintLeft_toLeftOf="@id/text_title_email"
            app:layout_constraintStart_toEndOf="@+id/text_title_email"
            app:layout_constraintTop_toTopOf="@+id/text_title_email"
            tools:text="lucasssilva021@gmail.com" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_6dp"
            android:lines="1"
            android:text="@string/text_card_visit_name"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_18sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_title_name"
            app:layout_constraintLeft_toLeftOf="@id/text_title_name"
            app:layout_constraintStart_toEndOf="@+id/text_title_name"
            app:layout_constraintTop_toTopOf="@+id/text_title_name" />

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_6dp"
            android:lines="1"
            android:text="@string/text_card_visit_name"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_18sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_title_phone"
            app:layout_constraintLeft_toLeftOf="@id/text_title_phone"
            app:layout_constraintStart_toEndOf="@+id/text_title_phone"
            app:layout_constraintTop_toTopOf="@+id/text_title_phone" />

        <TextView
            android:id="@+id/text_title_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size_6dp"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Movile" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
